# yapee

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
src/: yapee.py
tests/: test_all.py
